[tool.poetry]
name = "core"
version = "3.0.0"
description = ""
authors = ["Jatin Sharma <jatin20563@iiitd.ac.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
click = "^8.1.7"
flask = "^3.0.2"
requests = "^2.26.0"
python-dotenv = "^1.0.1"
pandas = "^2.2.0"
djangorestframework = "^3.14.0"
shapely = "^2.0.3"
geopy = "^2.4.1"
scikit-learn = "^1.4.1.post1"
geopandas = "^0.14.3"
aiohttp = "^3.9.3"
polyline = "^2.0.2"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"
django-cprofile-middleware = "^1.0.5"
networkx = "^3.3"
requests-futures = "^1.0.1"
drf-spectacular = "^0.27.2"
django-cors-headers = "^4.4.0"
pandasql = "^0.7.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^22.1.0"
flake8 = "^4.0.1"
mypy = "^0.910"
isort = "^5.10.3"
pylint = "^2.11.1"


[tool.poetry.scripts]
zero_hop_test = "core.tests.route_existence_test:zero_stop_existence_test"
consistency = "core.tests.consistency_test:consistency_test"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
